# fullstack-ai-marketing-platform

./: .gitignore
asset-processing-service/: .gitignore  Dockerfile  pyproject.toml
asset-processing-service/asset_processing_service/: main.py
nextjs/: .gitignore  package-lock.json  package.json
nextjs/app/: page.tsx
