[project]
name = "asset-processing-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Amin",email = "amin@yappybuy.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]
[tool.poetry.scripts]
asset-processing-service = "asset_processing_service.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
